# codex-as-api

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.env.example  requirements-server.txt  requirements.txt
src/codex_as_api/: auth.py  provider.py  server.py
tests/: test_auth.py  test_provider.py  test_server.py
